[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/UI/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://src/UI/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Fonts/DroidSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/UI/titleScreenBG.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 2
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
use_filter = true
font_data = ExtResource( 3 )

[node name="TitleScreen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 160.817, 91.8451 )
scale = Vector2( 0.252207, 0.252207 )
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 62.0
margin_top = 34.0
margin_right = 257.0
margin_bottom = 146.0
custom_constants/separation = 15

[node name="MountainTreasureLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 195.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0823529, 0.717647, 0.584314, 1 )
text = "Mountain Treasure"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 195.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Start"
flat = true

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 195.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Exit"
flat = true

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 180.0
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
